<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">24 Istanbul</string>
    <string name="settings_range">Change Range</string>
    <string name="eat">Eat Something</string>
    <string name="attraction">Tourist Attractions</string>
    <string name="go">Go Out</string>
    <string name="routeDemo">Route Demo</string>
    <string name="shareDemo">Share Demo</string>
    <string name="title_activity_range">RangeActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

</resources>
