<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    android:background="@drawable/istanbul1"
    
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/eatButton"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:alpha="0.7"
       android:textStyle="bold"
        
        android:onClick="startQuestionActivity"
        android:text="@string/eat" />
    
        <Button
        android:id="@+id/attractionsButton"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:alpha="0.7"
       android:textStyle="bold"
    
        android:onClick="startQuestionActivity"
        android:text="@string/attraction" />
        
            <Button
        android:id="@+id/goButton"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:alpha="0.7"
       android:textStyle="bold"
        
        android:onClick="startQuestionActivity"
        android:text="@string/go" />


    <Button
        android:id="@+id/routeButton"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:onClick="routeDemo"
        android:alpha="0.7"
       android:textStyle="bold"
        
        android:text="@string/routeDemo" />

    <Button
        android:id="@+id/shareButton"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:onClick="shareDemo"
        android:alpha="0.7"
       android:textStyle="bold"
        
        android:text="@string/shareDemo" />

</LinearLayout>